# frozenchars

./: .clang-tidy  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  a.out  context7.json  example.cpp  example_frozen_format.cpp  example_frozen_map_use_cases.cpp  example_parse_to_tuple_use_cases.cpp  example_render_with_output_buffer.cpp  example_split.cpp  frozenchars.hpp  test_split_direct  test_split_logic  test_split_tester  test_split_v_debug  vcpkg.json
.github/workflows/: ci.yml
.opencode/plans/: 1781008975612-glowing-circuit.md  1781973740297-nimble-engine.md
build-no-tests/: CMakeCache.txt  Makefile  cmake_install.cmake  frozencharsConfig.cmake
cmake/: frozencharsConfig.cmake.in
docs/plans/: 2026-06-06-inja-type-erasure-full-plan.md
docs/specs/: 2026-06-06-inja-type-erasure-full-design.md
docs/superpowers/plans/: 2026-05-31-inja-engine-fixes.md  2026-07-01-frozen-regex-implementation.md  2026-07-02-frozen-trie.md
docs/superpowers/specs/: 2026-03-27-trim-helpers-design.md  2026-04-11-formatter-parse-number-design.md  2026-04-14-frozenstring-shrink-to-fit-design.md  2026-04-16-frozenstring-ostream-design.md  2026-04-24-perfect-map-iterator-polish-design.md  2026-04-24-perfect-map-keyed-initialization-design.md  2026-04-24-perfect-map-stl-surface-design.md  2026-04-24-static-perfect-map-design.md  2026-05-20-inja-template-vm-design.md  2026-05-31-inja-engine-fixes-design.md  2026-07-01-frozen-regex-design.md  2026-07-02-frozen-trie-design.md
example/: CMakeLists.txt  example.cpp  example_minify_lua.cpp  example_minify_template_tag.cpp
include/: frozenchars.hpp
include/frozenchars/: case_conv.hpp  char_pred.hpp  chrono.hpp  color.hpp  concepts.hpp  ctre.hpp  cypher_minifier.hpp  encoding.hpp  fast_inja.hpp  format.hpp  freeze.hpp  frozen_format.hpp  frozen_map.hpp  frozen_regex.hpp  frozen_string.hpp  glaze_frozen_map.hpp  inja_access.hpp  inja_engine.hpp  inja_function.hpp  inja_types.hpp  inja_value.hpp  literals.hpp  map.hpp  minify.hpp  multiline.hpp  number_conv.hpp  ops.hpp  path.hpp  perfect_map.hpp  regex_comment.hpp  set.hpp  split.hpp  static_perfect_map.hpp  string.hpp  string_ops.hpp  template_engine.hpp  template_value.hpp  trie_index.hpp  trie_map.hpp  trie_set.hpp  (+3 more)
include/frozenchars/detail/: char_utils.hpp  chrono_impl.hpp  freeze_impl.hpp  glaze_detect.hpp  number_conv.hpp  pipe.hpp  split_impl.hpp  string_utils.hpp  type_mapping.hpp
include/frozenchars/fast_inja/detail/: chunk.hpp  escape.hpp  glz_dispatch.hpp  loop_state.hpp  parse.hpp  render.hpp  resolve.hpp  serialize_value.hpp  types.hpp
include/frozenchars/inja/: api.hpp  engine_impl.hpp  types.hpp
include/frozenchars/json/: compress.hpp  crush.hpp
include/frozenchars/json/detail/: common.hpp  compress_detail.hpp  crush_detail.hpp  json_parser.hpp
include/frozenchars/mod/: algorithms.hpp  all_basic.hpp  chrono.hpp  color.hpp  containers.hpp  core.hpp  encoding.hpp  formatting.hpp  ops.hpp  regex.hpp
test/: CMakeLists.txt  bench_frozen_map.cpp  bench_frozen_regex.cpp  bench_frozen_set.cpp  bench_frozen_trie.cpp  bench_map_comparison.cpp  bench_pattern_comparison.cpp  bench_wildcard.cpp  benchmark_inja_runtime.cpp  em_catch2_main.cpp  smoke_mod_core.cpp  test_array_to_map.cpp  test_ascii_nttp.cpp  test_base64.cpp  test_case_conv.cpp  test_char_pred.cpp  test_chrono.cpp  test_color.cpp  test_compile_error_pipe.cpp  test_complex.cpp  test_compose.cpp  test_ctre.cpp  test_cypher_minifier.cpp  test_encoding.cpp  test_environment_constants.cpp  test_fast_inja.cpp  test_format.cpp  test_frozen_format.cpp  test_frozen_map.cpp  test_frozen_map_opt.cpp  test_frozen_regex.cpp  test_frozen_set.cpp  test_frozen_string_api.cpp  test_frozen_trie.cpp  test_inja_access.cpp  test_inja_types.cpp  test_json_compress.cpp  test_json_crush.cpp  test_line_surround.cpp  test_minifier.cpp  (+23 more)
test/compile_fail/: chrono_parse_date_macro_bad_format.cpp  chrono_parse_iso_date_bad_day.cpp  chrono_parse_iso_date_bad_format.cpp  chrono_parse_iso_date_bad_month.cpp  chrono_parse_iso_datetime_bad_format.cpp  chrono_parse_tz_offset_bad_format.cpp  frozen_format_missing_arg.cpp  frozen_format_too_few_args.cpp  frozen_format_unmatched_brace.cpp  frozen_format_unmatched_brace2.cpp  frozen_map_duplicate_keys.cpp  frozen_map_empty_keys.cpp  frozen_map_make_frozen_map_bad_key.cpp  frozen_map_make_frozen_map_bad_value.cpp  frozen_map_make_frozen_map_wrong_arity.cpp  frozen_map_seed_limit_zero.cpp  frozen_regex_empty_pattern.cpp  frozen_regex_max_strings_exceeded.cpp  frozen_regex_quantifier.cpp  frozen_regex_unbalanced_paren.cpp  frozen_set_duplicate_keys.cpp  frozen_set_empty_keys.cpp  join_lines_sep_too_long.cpp  parse_to_tuple_void_pointer.cpp  perfect_map_duplicate_keys.cpp  perfect_map_empty_keys.cpp  perfect_map_make_perfect_map_bad_key.cpp  perfect_map_make_perfect_map_bad_value.cpp  perfect_map_make_perfect_map_wrong_arity.cpp  perfect_map_seed_limit_zero.cpp  run_compile_fail.cmake  static_perfect_map_duplicate_keys.cpp  static_perfect_map_empty_keys.cpp  static_perfect_map_seed_limit_zero.cpp  to_format_string_type_mismatch.cpp  to_sv_missing_arg.cpp  to_sv_type_mismatch.cpp
