add_executable(example_smoke example.cpp)
target_link_libraries(example_smoke PRIVATE frozenchars::frozenchars)
target_compile_features(example_smoke PUBLIC cxx_std_23)
add_test(NAME example_smoke COMMAND example_smoke)

add_executable(example_split example_split.cpp)
target_compile_features(example_split PRIVATE cxx_std_23)
target_link_libraries(example_split PRIVATE frozenchars::frozenchars)
add_test(NAME example_split COMMAND example_split)

add_executable(example_frozen_map_use_cases example_frozen_map_use_cases.cpp)
target_compile_features(example_frozen_map_use_cases PRIVATE cxx_std_23)
target_link_libraries(example_frozen_map_use_cases PRIVATE frozenchars::frozenchars)
add_test(NAME example_frozen_map_use_cases COMMAND example_frozen_map_use_cases)

add_executable(example_parse_to_tuple_use_cases example_parse_to_tuple_use_cases.cpp)
target_compile_features(example_parse_to_tuple_use_cases PRIVATE cxx_std_23)
target_link_libraries(example_parse_to_tuple_use_cases PRIVATE frozenchars::frozenchars)
add_test(NAME example_parse_to_tuple_use_cases COMMAND example_parse_to_tuple_use_cases)

add_executable(example_frozen_format example_frozen_format.cpp)
target_compile_features(example_frozen_format PRIVATE cxx_std_23)
target_link_libraries(example_frozen_format PRIVATE frozenchars::frozenchars)
add_test(NAME example_frozen_format COMMAND example_frozen_format)
